res/examples/invalid/infix_type_mismatch_tuple.eg
1 % (1, "foo",);
(1, "foo",) % 1;

// out: TypeError: mismatched types: expected type `number` but received `tuple<number, string>`
// out: TypeError: mismatched types: expected type `number` but received `tuple<number, string>`
